<resources>
    <string name="app_name">Ideal Sports Center</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="reserved_on">Réservé le&#160;</string>
    <string name="account_pass">Mot de passe</string>
    <string name="today">Aujourd\'hui</string>
    <string name="reserver">Voulez-vous reserver à&#160;</string>
    <string name="dereserver">Voulez-vous supprimer reservation à&#160;</string>
    <string name="reserver_title">Réservation</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="wait_progress">Veuillez patienter...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="reservations">Résérvations</string>
    <string name="courses_list">Liste des cours</string>
    <string name="others">Autre</string>
    <string name="twice">Appuiez deux fois pour quitter</string>
    <string name="resume">Planning</string>
    <string name="salle_sature">Salle saturée</string>
    <string name="select_course">Sélectionner cours</string>
    <string name="all_courses">Tout les cours</string>

    <string name="details">Détailles</string>
    <string name="nom">Libelle</string>
    <string name="periode">Période</string>
    <string name="price">Prix</string>
    <string name="duration">Durée</string>
    <string name="unfortunatally">Désolé ce cours est saturé</string>
    <string name="verify_network">Veuillez verifier votre connexion internet</string>
    <string name="reservation_success">Votre résérvation a été éffectuer avec succès</string>
    <string name="delete_success">Votre résérvation a été supprimer avec succès</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="verif_mail_pass">Vérifier votre login/mot de passe</string>
    <string name="verif_mail">Vérifier votre login</string>
    <string name="verif_pass">Vérifier votre mot de passe</string>
    <string name="coach_error">vous n\'êtes pas autorisé à utiliser cette application tant que coach</string>
    <string name="no_courses">Aucun cours trouvé</string>
    <string name="title_activity_main_show">MainShow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="news">Actualités</string>
    <string name="about">A propos</string>
    <string name="press_twice">Appuyer deux fois pour sortir</string>
    <string name="tel">Tel:</string>
    <string name="mail">Mail:</string>
    <string name="adr">Adresse:</string>
    <string name="tel_str">+216 98 749 415</string>
    <string name="mail_str">idealsportscenter@topnet.tn</string>
    <string name="send_mail">Envoyer un E-mail</string>
    <string name="no_mail_app">Aucune application E-mail installée</string>
    <string name="adr_str">Avenu du Dr Mohamed Souissi, dar Chaâbane Elfehri, Nabeul</string>
    <string name="fb_page_display">facebook.com/IdealSportsCenter</string>
    <string name="account">Compte</string>
    <string name="should_connect">Vous devez vous connecter pour acceder </string>
    <string name="connecting">Connexion...</string>
    <string name="error">Erreur</string>
    <string name="connected_successfully">Bienvenue</string>
    <string name="no_reservations">Pas de résérvations</string>
    <string name="seance_time_over">Vous ne pouvez pas modifier des anciennes résérvations</string>
    <string name="paid">Payé</string>
    <string name="not_paid">Non payé</string>
    <string name="places_dispo">Places disponibles</string>
    <string name="no_places">Salle saturée</string>
    <string name="reserved">Déja résérvé</string>
    <string name="about_description">L\'Ideal Sports Center est un centre sportif dont les valeurs sont de conjuguer équilibre et bien-être physique et psychique.</string>

</resources>
