<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_news"
        android:title="@string/news"
        />
    <item
        android:id="@+id/nav_reserver"
        android:icon="@drawable/ic_reserver"
        android:title="@string/reservations" />
    <item
        android:id="@+id/nav_list_cours"
        android:icon="@drawable/ic_list_cours"
        android:title="@string/courses_list" />
    <item
        android:id="@+id/nav_resume"
        android:icon="@drawable/ic_resume"
        android:title="@string/resume" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about"
        />

</menu>
