<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reserver"
            android:icon="@drawable/ic_reserver"
            android:title="@string/reservations" />
        <item
            android:id="@+id/nav_list_cours"
            android:icon="@drawable/ic_list_cours"
            android:title="@string/courses_list" />
        <item
            android:id="@+id/nav_resume"
            android:icon="@drawable/ic_resume"
            android:title="@string/resume" />

    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_disconnect"
                android:icon="@drawable/ic_disconnect"
                android:title="@string/disconnect" />

        </menu>
    </item>

</menu>
