<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    android:layout_gravity="center"
    app:cardCornerRadius="25dp"
    android:id="@+id/main_card"
    app:contentPadding="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/should_connect"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/material_red"
                android:textSize="17dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_marginRight="55dp"
                    android:textColor="@color/black"/>
                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="200dp"
                    android:id="@+id/login_et"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_pass"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/black"/>
                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="200dp"
                    android:id="@+id/pwd_et"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:layout_marginTop="15dp"
                android:text="OK"
                android:foreground="@drawable/custom_ripple"
                android:textColor="@color/lightGray"
                android:enabled="false"
                android:id="@+id/connect_btn"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

