<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:focusable="true"
                    android:padding="10dp"
                    android:background="@drawable/custom_ripple"
                    android:orientation="horizontal"
                    android:id="@+id/spinner_layout">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:id="@+id/spinner_tv"
                            android:layout_gravity="center_vertical"/>
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/ic_search"
                            tools:ignore="VectorDrawableCompat" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/go_today">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:paddingTop="5dp"
                            android:src="@drawable/ic_date"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="19dp"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:id="@+id/tv_today"/>
                </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <com.alamkanak.weekview.WeekView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.92"
                    app:eventTextColor="@android:color/white"
                    app:textSize="12sp"
                    android:id="@+id/weekview"
                    app:hourHeight="60dp"
                    app:headerColumnPadding="8dp"
                    app:headerColumnTextColor="#8f000000"
                    app:headerRowPadding="12dp"
                    app:columnGap="8dp"
                    app:noOfVisibleDays="3"
                    app:headerRowBackgroundColor="#ffefefef"
                    app:dayBackgroundColor="#05000000"
                    app:todayBackgroundColor="#1848adff"
                    app:headerColumnBackground="#ffffffff"
                    tools:layout_editor_absoluteY="8dp"
                    tools:layout_editor_absoluteX="8dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.07"
                    android:background="@color/white"
                    android:paddingLeft="20dp"
                    android:orientation="horizontal"
                    android:layout_gravity="bottom">
                        <android.support.v7.widget.CardView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            app:cardBackgroundColor="@color/material_green"
                            app:cardCornerRadius="3dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/places_dispo"
                            android:textColor="@color/black"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"/>

                        <android.support.v7.widget.CardView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center_vertical"
                            app:cardBackgroundColor="@color/material_red"
                            app:cardCornerRadius="3dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_places"
                            android:textColor="@color/black"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"/>
                        <android.support.v7.widget.CardView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="10dp"
                            android:layout_gravity="center_vertical"
                            app:cardBackgroundColor="@color/blue"
                            app:cardCornerRadius="3dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reserved"
                            android:textColor="@color/black"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="5dp"/>


                </LinearLayout>
        </LinearLayout>



</LinearLayout>